<resources>
    <string name="app_name">App</string>

    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginLabel">Login</string>
    <string name="pleaseWaitLabel">Please Wait&#8231;</string>
    <string name="noRecordLabel">No Record Found</string>
    <string name="listingCompleteLabel">Listing Complete</string>
    <string name="errorLabel">Error</string>
    <string name="loadingLabel">Loading</string>
    <string name="logoutLabel">Logout</string>
    <string name="placeLabel">Place :</string>
    <string name="placeHint">Place</string>
    <string name="distanceLabel">Distance :</string>
    <string name="distanceHint">Distance</string>
    <string name="updateLabel">Update</string>
    <string name="noticeLabel">Notice</string>
    <string name="logoutMessage">Are you sure you want to logout?</string>
    <string name="yesLabel">Yes</string>
    <string name="noLabel">No</string>
</resources>
