<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@android:color/darker_gray">

        <TextView
            android:id="@+id/tvDialogMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/_11sdp" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@android:drawable/ic_delete" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <EditText
            android:id="@+id/etPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/placeHint"
            android:inputType="text"
            android:textSize="@dimen/_11sdp"
            android:textColor="@android:color/black"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/etDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:hint="@string/distanceHint"
            android:inputType="numberDecimal"
            android:textSize="@dimen/_11sdp"
            android:textColor="@android:color/black"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnDialog"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/xml_rectangle_rounded_blue"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>