<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".mvp.ui.activity.LoginActivity">

    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_above="@+id/llEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/drawable_logo" />

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llPassword"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/_11sdp"
            tools:ignore="Autofill" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/llEmail"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/llPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:layout_toStartOf="@+id/cbShowPassword"
            android:layout_toLeftOf="@+id/cbShowPassword"
            android:background="@android:color/transparent"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/_11sdp"
            tools:ignore="Autofill" />

        <CheckBox
            android:id="@+id/cbShowPassword"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:background="@drawable/drawable_show_password"
            android:button="@android:color/transparent"
            android:checked="true" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/llPassword"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llPassword"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:background="@drawable/xml_rectangle_rounded_blue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/loginLabel"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".1" />

    </LinearLayout>


</RelativeLayout>